<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:id = "@+id/userprofileScroll" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frag_user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/profile_color"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/prof_header"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/placeholder"
            android:scaleType="centerCrop"
            android:src="@drawable/edituser_header"
            app:layout_constraintBottom_creator="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/frag_user_profile"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/frag_user_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_editor_absoluteX="0dp"
            app:layout_editor_absoluteY="0dp"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/prof_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="#E4E4E4"
            android:text="Edit"
            android:background="@null"
            android:textColor="#0A2DE8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_fullname"
            app:layout_constraintTop_toBottomOf="@+id/prof_header" />

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/placeholder_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prof_header"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/prof_age"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/age"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fullname" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@+id/prof_age"
            app:layout_constraintTop_toBottomOf="@+id/tv_fullname"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/prof_sex"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prof_age" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@+id/prof_sex"
            app:layout_constraintTop_toBottomOf="@+id/tv_age"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/prof_country"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/country"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prof_sex" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@+id/prof_country"
            app:layout_constraintTop_toBottomOf="@+id/tv_sex"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/prof_city"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/city"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prof_country" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@+id/prof_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_country"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/prof_height"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/height"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prof_city" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@+id/prof_height"
            app:layout_constraintTop_toBottomOf="@+id/tv_city"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/prof_weight"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/weight"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prof_height" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toEndOf="@+id/prof_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_height"
            tools:ignore="RtlCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>